[package]
name = "photo_works"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4"
log = "0"
env_logger = "0"
home = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0"
tabled = "0"
dialoguer = "0"
rusqlite = { version = "0", features = ["bundled"] }
sha2 = "0"
walkdir ="2"
refinery = { version = "0", features = ["rusqlite"]}
kamadak-exif = "0"
chrono = "0"

[dev-dependencies]
serial_test = "2"

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]